# zengin-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md
.github/workflows/: ci.yml
crates/zengin-cli/: Cargo.toml  README.md
crates/zengin-cli/src/: main.rs
crates/zengin-cli/tests/: parse.rs
crates/zengin-fmt/: Cargo.toml
crates/zengin-fmt/src/: account_transfer.rs  account_transfer_result.rs  payment_notice.rs  payroll_transfer.rs  transfer_account_inquiry.rs
crates/zengin-rs/: Cargo.toml
crates/zengin-rs/src/: account_transfer.rs  account_transfer_result.rs  fixed.rs  general_transfer.rs  lib.rs
src/: account_transfer.rs  lib.rs
