[workspace]
members = ["crates/zengin-rs", "crates/zengin-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Parser and writer for Zengin account transfer fixed-width files"
repository = "https://github.com/KotobaMedia/zengin-rs"

[workspace.dependencies]
doc-comment = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
