[workspace]
members = ["crates/zengin-fmt", "crates/zengin-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Parser and writer for Zengin fixed-width files"
repository = "https://github.com/KotobaMedia/zengin-fmt"

[workspace.dependencies]
doc-comment = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
