[workspace]
members = ["crates/zengin-fmt", "crates/zengin-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Parser and writer for Zengin fixed-width files"
repository = "https://github.com/KotobaMedia/zengin-fmt"
keywords = ["zengin", "fixed-width", "parser", "banking"]
categories = ["encoding", "parser-implementations"]

[workspace.metadata.release]
shared-version = true
consolidate-commits = true
allow-branch = ["main"]
dependent-version = "upgrade"
pre-release-commit-message = "Release {{version}}"
tag-name = "v{{version}}"
tag-message = "Release {{version}}"

[workspace.dependencies]
doc-comment = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
