[package]
name = "zengin-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[[bin]]
name = "zengin"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
zengin-rs = { path = "../zengin-rs", version = "0.1.0" }
