[package]
name = "zengin-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[[bin]]
name = "zengin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
zengin-fmt = { path = "../zengin-fmt", version = "0.1.0" }
