[package]
name = "zengin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line parser for Zengin fixed-width files"
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/zengin-cli"
keywords = ["zengin", "fixed-width", "parser", "banking", "cli"]
categories = ["command-line-utilities", "encoding", "parser-implementations"]

[[bin]]
name = "zengin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
zengin-fmt = { path = "../zengin-fmt", version = "0.1.0" }
